加入banner后台接口

--- a/h5/index.html
+++ b/h5/index.html
@@ -44,8 +44,8 @@
         w();
       })(window);
     </script>
-  </head>
+  <link href="/css/app.css" rel="stylesheet"></head>
   <body>
     <div id="app" style="background:#f8f8f8;"></div>
-  </body>
+  <script type="text/javascript" src="/lib\lib.dll.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
 </html>
